package org.tongji.sse.enums;

public enum TargetType {
    COMMENT,
    REPLY,
}
