export interface Comment {
  id:number;
  audioId:number;
  userId:number;
  username:string;
  content:string;
  createTime:string;
}

